--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry kind="lib" path="C:/Library/jfoenix-8.0.8.jar"/>
 	<classpathentry kind="lib" path="C:/Library/jfoenix-9.0.8.jar"/>
 	<classpathentry kind="lib" path="C:/Users/alams/Downloads/mysql-connector-java-8.0.20.jar"/>
+	<classpathentry kind="lib" path="C:/Library/jasperreports-6.12.2.jar"/>
+	<classpathentry kind="lib" path="C:/Library/jasper/jasperreports-6.12.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
